src/App.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  background-color: #1b1b1b;
}

.default-transition {
  @apply transition duration-300 ease-out;
}

.MuiTreeItem-label,
fieldset {
  @apply default-transition;
}

@keyframes border-pulsate {
  0% {
    border-color: rgba(255, 255, 255, 1);
  }
  50% {
    border-color: rgba(255, 255, 255, 0.3);
  }
  100% {
    border-color: rgba(255, 255, 255, 1);
  }
}

.btn {
  @apply p-2 rounded bg-transparent text-white default-transition;
  border: 1px solid rgba(255, 255, 255, 0.23);

  &:hover {
    background-color: rgba(255, 255, 255, 0.3);
    border-color: white;
  }

  &:active {
    background-color: rgba(255, 255, 255, 0.4);
    border-color: white;
  }

  &:active,
  &.active,
  &.superactive {
    &:focus {
      outline: none;
      box-shadow: none;
    }
  }

  &.active,
  &.superactive {
    background-color: rgb(117, 129, 146);
  }
  &.superactive {
    animation: border-pulsate 2s infinite;
  }
}

.toolbar .btn {
  padding: 6px 12px;
  border-radius: 0;
}

.grid2x {
  @apply grid grid-cols-2 row-gap-3 col-gap-2 py-2;
}

// material ui overrides
body {
  .MuiCircularProgress-colorPrimary {
    color: white;
  }

  .MuiAutocomplete-groupLabel {
    line-height: unset;
    padding-top: 7px;
    padding-bottom: 1px;
    font-size: 0.68rem;
  }
}

.react-transform-component {
  width: 100%;
  height: 100%;
}

.selected-element-code-highlight {
  color: red !important;
  cursor: pointer;
  font-weight: bold;
  font-style: oblique;
}

@keyframes fade-in-animation {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.dark-glass {
  background-color: rgba(0, 0, 0, 0.4);
  backdrop-filter: blur(4px) saturate(150%);
  animation: fade-in-animation 250ms ease-out forwards;
}

.btngrp-h {
  display: flex;
  flex-shrink: 0;
  overflow-x: auto;

  > .btn,
  > .btngrp-v {
    flex-grow: 1;
    min-width: min-content;

    &:not(:last-child) {
      &,
      .btn {
        border-top-right-radius: 0;
        border-bottom-right-radius: 0;
      }
    }

    &:not(:first-child) {
      &,
      .btn {
        border-top-left-radius: 0;
        border-bottom-left-radius: 0;
      }
    }
  }
}

.btngrp-v {
  display: flex;
  flex-shrink: 0;
  flex-direction: column;
  overflow-y: auto;

  > .btn,
  > .btngrp-h {
    flex-grow: 1;
    min-height: min-content;

    &:not(:last-child) {
      &,
      .btn {
        border-bottom-left-radius: 0;
        border-bottom-right-radius: 0;
      }
    }

    &:not(:first-child) {
      &,
      .btn {
        border-top-left-radius: 0;
        border-top-right-radius: 0;
      }
    }
  }
}

::-webkit-scrollbar {
  width: 16px;
}

::-webkit-scrollbar-track {
  border-radius: 10px;
}

::-webkit-scrollbar-thumb {
  background: rgba(255, 255, 255, 0.8);
  border-left: 10px solid rgba(0, 0, 0, 0);
  background-clip: padding-box;
  border-radius: 10px;
}

.editor-tabs {
  .tabs {
    min-height: min-content;
  }

  ::-webkit-scrollbar {
    height: 5px;
  }

  ::-webkit-scrollbar-track {
    border-radius: 10px;
  }

  ::-webkit-scrollbar-thumb {
    background: rgba(255, 255, 255, 0.2);
    border-left: unset;
    background-clip: unset;
    border-radius: unset;
  }
}

div[role="tooltip"] {
  z-index: 1;
}

